--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Game index{% endblock %}
+{% block title %}Tous nos jeux{% endblock %}
 
 {% block body %}
     <div class="hero-scene">
