--- a/templates/game/show.html.twig
+++ b/templates/game/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Game{% endblock %}
+{% block title %}Jeux{% endblock %}
 
 {% block body %}
-    <h1>Game</h1>
+    <h1>Nos jeux</h1>
 
     <table class="table">
         <tbody>
@@ -12,11 +12,11 @@
                 <td>{{ game.id }}</td>
             </tr>
             <tr>
-                <th>Title</th>
+                <th>Titre</th>
                 <td>{{ game.title }}</td>
             </tr>
             <tr>
-                <th>Content</th>
+                <th>Description</th>
                 <td>{{ game.content }}</td>
             </tr>
             <tr>
@@ -28,7 +28,7 @@
                 <td>{{ game.genre }}</td>
             </tr>
             <tr>
-                <th>Price</th>
+                <th>Prix</th>
                 <td>{{ game.price }}</td>
             </tr>
             <tr>
@@ -36,7 +36,7 @@
                 <td>{{ game.promotion }}</td>
             </tr>
             <tr>
-                <th>Platform</th>
+                <th>Plateforme</th>
                 <td>{{ game.platform }}</td>
             </tr>
             <tr>
@@ -44,23 +44,23 @@
                 <td>{{ game.image }}</td>
             </tr>
             <tr>
-                <th>Release_date</th>
+                <th>Date de sortie</th>
                 <td>{{ game.releaseDate ? game.releaseDate|date('Y-m-d') : '' }}</td>
             </tr>
             <tr>
-                <th>Created_at</th>
+                <th>Créé le</th>
                 <td>{{ game.createdAt ? game.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
             <tr>
-                <th>Updated_at</th>
+                <th>Modifier le</th>
                 <td>{{ game.updatedAt ? game.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_game_index') }}">back to list</a>
+    <a href="{{ path('app_game_index') }}">Retourner à la liste</a>
 
-    <a href="{{ path('app_game_edit', {'id': game.id}) }}">edit</a>
+    <a href="{{ path('app_game_edit', {'id': game.id}) }}">Modifier</a>
 
     {{ include('game/_delete_form.html.twig') }}
 {% endblock %}
