--- a/templates/store/edit.html.twig
+++ b/templates/store/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Store{% endblock %}
+{% block title %}Modifier{% endblock %}
 
 {% block body %}
-    <h1>Edit Store</h1>
+    <h1>Modifier</h1>
 
     {{ include('store/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_store_index') }}">back to list</a>
+    <a href="{{ path('app_store_index') }}">Retourner à la liste</a>
 
     {{ include('store/_delete_form.html.twig') }}
 {% endblock %}
