--- a/templates/store/new.html.twig
+++ b/templates/store/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Store{% endblock %}
+{% block title %}Nouveau Magasin{% endblock %}
 
 {% block body %}
-    <h1>Create new Store</h1>
+    <h1>Créer un magasin</h1>
 
     {{ include('store/_form.html.twig') }}
 
-    <a href="{{ path('app_store_index') }}">back to list</a>
+    <a href="{{ path('app_store_index') }}">Retourner à la liste</a>
 {% endblock %}
