--- a/templates/store/show.html.twig
+++ b/templates/store/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Store{% endblock %}
+{% block title %}Nos magasins{% endblock %}
 
 {% block body %}
-    <h1>Store</h1>
+    <h1>Nos magasins</h1>
 
     <table class="table">
         <tbody>
@@ -12,7 +12,7 @@
                 <td>{{ store.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ store.name }}</td>
             </tr>
             <tr>
@@ -20,27 +20,27 @@
                 <td>{{ store.image }}</td>
             </tr>
             <tr>
-                <th>Open_time</th>
+                <th>Heure d'ouverture</th>
                 <td>{{ store.openTime ? store.openTime|date('H:i:s') : '' }}</td>
             </tr>
             <tr>
-                <th>Close_time</th>
+                <th>Heure de fermeture</th>
                 <td>{{ store.closeTime ? store.closeTime|date('H:i:s') : '' }}</td>
             </tr>
             <tr>
-                <th>Created_at</th>
+                <th>Créé le</th>
                 <td>{{ store.createdAt ? store.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
             <tr>
-                <th>Updated_at</th>
+                <th>Modifier le</th>
                 <td>{{ store.updatedAt ? store.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_store_index') }}">back to list</a>
+    <a href="{{ path('app_store_index') }}">Retourner à la liste</a>
 
-    <a href="{{ path('app_store_edit', {'id': store.id}) }}">edit</a>
+    <a href="{{ path('app_store_edit', {'id': store.id}) }}">Modifier</a>
 
     {{ include('store/_delete_form.html.twig') }}
 {% endblock %}
