--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,17 +13,20 @@
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.firstName, {
-            label:'Prénom'
+            label:'Prénom : '
         }) }}
         {{ form_row(registrationForm.lastName, {
-            label:'Nom'
+            label:'Nom : '
         }) }}
         {{ form_row(registrationForm.birthdate, {
-            label:'Date d\'aniversaire'
+            label:'Date d\'aniversaire : '
         }) }}
+        {{ form_row(registrationForm.adress, {
+            label:'Adresse : '
+        })}}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Password : '
         }) }}
         {{ form_row(registrationForm.agreeTerms, {
             label: 'Accepter les conditions'
