--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,17 @@
         {% endblock %}
     </head>
     <body>
+        {% for label, messages in app.flashes %}
+            <div class="flash-{{ label }}">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
+        {% if app.session.get('selected_store') %}
+            <p>Selected Store ID: {{ app.session.get('selected_store') }}</p>
+        {% endif %}
+
         {% block header %}
             <header>
                 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
