--- a/templates/store/index.html.twig
+++ b/templates/store/index.html.twig
@@ -11,7 +11,7 @@
 
     <div class="row">
         {% for store in stores %}
-            <div class="col-md-4">
+            <div class="col-md-4 mb-3">
                 <div class="card m-3">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>{{ store.name }}</strong></h5>
