--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,6 +44,7 @@
                                         <a class="nav-link dropdown-toggle secondary" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Mon espace</a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="{{ path('app_dashboard_admin') }}">Dashboard</a></li>
+                                            <li><a class="dropdown-item secondary" href="{{ path('app_basket') }}">Mon panier</a></li>
                                             <li><a class="dropdown-item" href="{{ path('app_user_profile') }}">Mes infos</a></li>
                                             <li><hr class="dropdown-divider"></li>
                                             <li><a href="{{ path('app_logout') }}" class="dropdown-item danger" type="button" id="/logout">Se déconnecter</a></li>
