--- a/templates/order/dashboard_admin.html.twig
+++ b/templates/order/dashboard_admin.html.twig
@@ -1,11 +1,52 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Dashboard Admin{% endblock %}
 
 {% block body %}
     <div class="hero-scene">
         <div class="text-center hero-scene-content secondary">
-            <h1>Dashboard</h1>
+            <h1>Dashboard Admin</h1>
         </div>
+    </div>
+    
+    <div class="text-center mt-4">
+        <a href="{{ path('app_dashboard_admin', {view_all_stores: true}) }}" class="btn btn-primary">Voir toutes les ventes</a>
+        <a href="{{ path('app_dashboard_admin') }}" class="btn btn-secondary">Voir les ventes pour mon magasin</a>
+    </div>
+
+    <div>
+        {% if orders is empty %}
+            <p>Aucune commande actuellemant.</p>
+        {% else %}
+            {% for order in orders %}
+                <div class="row justify-content-center mt-4">
+                    <div class="col-md-8">
+                        <div class="basket-info mb-3">
+                            <div class="d-flex justify-content-between align-items-center border-bottom pb-2">
+                                <p><strong>Jeu :</strong> {{ order.game.title }}</p>
+                                <p><strong>Quantité :</strong> {{ order.quantity }}</p>
+                                {% if order.game.promotion %}
+                                    <p><strong>Prix :</strong> {{ order.game.promotion }}€</p>
+                                {% else %}
+                                    <p><strong>Prix :</strong> {{ order.game.price }}€</p>
+                                {% endif %}                            
+                                <p><strong>Date de retrait :</strong> {{ order.pickupDate|date('d-m-Y') }}</p>
+                                <p><strong>Statut :</strong> {{ order.status }}</p>
+                                <p><strong>Magasin :</strong> {{ order.store.name }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+            <div class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <div class="basket-info mb-3">
+                        <div class="text-center justify-content-center">
+                            <p><strong>Prix total :</strong>{{ totalPrice }}€</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
